Bug 474955 - Duplicated online quotes when changing online quote source from GHNS type to local
Summary: Duplicated online quotes when changing online quote source from GHNS type to ...
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: Online quotes widget (other bugs)
Version First Reported In: 8.1.2
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 474956 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-27 22:35 UTC by Ralf Habacker
Modified: 2023-12-31 15:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.1.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2023-09-27 22:35:36 UTC
SUMMARY


STEPS TO REPRODUCE
1. start onlinequoteseditor
2. change to alkimiaX profile
3. install an online source from store.kde.org e.g. alkimia-fx-net.rate
4. select this online source in the online quotes list
5. uncheck "GHNS source" and apply changes
6. change profile to another and switch back to alkimiaX profile
7. inspect the online quotes list

OBSERVED RESULT
There are now two online sources in the online quotes list with the same name and type GHNS

EXPECTED RESULT
User expects not to have two online quotes with the same type and name in the list.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  openSUSE 15.4
KDE Frameworks Version:  5.90.0
Qt Version: 5.15.2
Comment 1 Thomas Baumgart 2023-09-30 05:42:48 UTC
*** Bug 474956 has been marked as a duplicate of this bug. ***
Comment 2 Ralf Habacker 2023-12-31 15:09:38 UTC
Git commit f9bce7442ef7c00122a716000018405983507fb2 by Ralf Habacker.
Committed on 31/12/2023 at 16:09.
Pushed by habacker into branch '8.1'.

Fix creating duplicated online quotes

When changing the type of an online quote from GHNS to local
an entry with duplicated name was created. To avoid this,
a new online quote is added instead with '.local' as name suffix.
FIXED-IN:8.1.3

M  +1    -0    src/alkonlinequotesource.cpp
M  +1    -0    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/-/commit/f9bce7442ef7c00122a716000018405983507fb2
Comment 3 Ralf Habacker 2023-12-31 15:16:17 UTC
Git commit 4e8e608340f8216f201c253c06c65ebf2a967365 by Ralf Habacker.
Committed on 31/12/2023 at 16:15.
Pushed by habacker into branch 'master'.

Fix creating duplicated online quotes

When changing the type of an online quote from GHNS to local
an entry with duplicated name was created. To avoid this,
a new online quote is added instead with '.local' as name suffix.
FIXED-IN:8.1.3
(cherry picked from commit f9bce7442ef7c00122a716000018405983507fb2)

M  +1    -0    src/alkonlinequotesource.cpp
M  +1    -0    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/-/commit/4e8e608340f8216f201c253c06c65ebf2a967365