Fix creating duplicated online quotes

When changing the type of an online quote from GHNS to local
an entry with duplicated name was created. To avoid this,
a new online quote is added instead with '.local' as name suffix.

BUG:474955
FIXED-IN:8.1.3