src/alkonlinequotesource.cpp
@@ -405,6 +405,7 @@ bool AlkOnlineQuoteSource::write()
             d->remove();
         return result;
     } else {
+        d->m_name.append(".local");
         result = d->write();
         if (d->m_profile->hasGHNSSupport() && d->m_storageChanged) {
             d->removeGHNSFile();
